<resources>
    <string name="app_name">Go4Lunch</string>

    <!-- activity_sign_in.xml -->
    <string name="go4lunch_logo">Go4Lunch logo</string>
    <string name="app_subtitle">Find a nice restaurant and invite your co-workers for lunch !</string>
    <string name="authentication_sign_in_btn">Sign in</string>
    <string name="authentication_sign_out_btn">Sign out</string>

    <!-- popup logout -->
    <string name="popup_logout_title">Logout</string>
    <string name="popup_logout_message">Are you sure you want to logout ?</string>
    <string name="popup_logout_yes_btn">YES</string>
    <string name="popup_logout_no_btn">NO</string>

    <!-- authentication_layout.xml -->
    <string name="sign_in_with_fb">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="sign_in_with_email">Sign in with Email</string>

    <!-- Google Maps Api Key -->
    <string name="google_maps_API_key">AIzaSyDZVL23At9zWQeYZsUd2sx7A3GaqPhkZEw</string>

    <!-- fragment_list_view.xml -->
    <string name="no_restaurants_nearby">No restaurants nearby</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="need_permission_msg">This application needs permission to run</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">"Vous avez reçu une notification"</string>

    <!-- activity_main.xml -->
    <string name="error_not_connected">You must log in !</string>
    <string name="error_authentication_canceled">Authentication canceled</string>
    <string name="error_no_internet">No internet connection !</string>
    <string name="error_unknown_error">An unknown error has occurred</string>
    <string name="connection_succeed">Authentication successful !</string>
    <string name="button_login_text_logged">Display profil</string>
    <string name="button_login_text_not_logged">Sign in</string>

    <!-- bottom_navigation_menu.xml -->
    <string name="icon_workmates">Workmates</string>
    <string name="icon_list_view">List View</string>
    <string name="icon_map_view">Map View</string>

    <!-- TOOLBAR -->
    <string name="icon_search">Search</string>
    <string name="i_am_hungry">I\'m Hungry!</string>
    <string name="available_workmates">Available workmates</string>

    <!-- fragment_maps.xml -->
    <string name="content_description_fab_current_location">Button to center map cursor in current user location</string>

    <!-- LOGIN ACTIVITY -->
    <string name="toolbar_title_login_activity">Votre Profil</string>
    <string name="text_input_username">Nom d\'utilisateur</string>
    <string name="text_view_email">Adresse email :</string>
    <string name="button_update_account">Mettre à jour le nom d\'utilisateur</string>
    <string name="button_delete_account">Supprimer mon compte</string>
    <string name="button_sign_out_account">Déconnexion</string>
    <string name="info_no_email_found">Auncune adresse email</string>
    <string name="info_no_username_found">Aucun nom d\'utilisateur</string>
    <string name="popup_message_confirmation_delete_account">Es-tu sûr(e) de vouloir supprimer ton compte ?</string>
    <string name="popup_message_choice_yes">Oui !</string>
    <string name="popup_message_choice_no">Non</string>
    <string name="check_box_is_mentor">Etes-vous un mentor ?</string>

    <!-- MENTOR_CHAT ACTIVITY -->
    <string name="toolbar_title_mentor_chat_activity">Chats de discussions</string>
    <string name="text_input_title_mentor_chat_activity">Composer votre message</string>
    <string name="button_title_mentor_chat_activity">ENVOYER</string>
    <string name="text_view_mentor_chat_error">Ce fil de discussion ne contient pour le moment aucun message&#8230;</string>
    <string name="popup_title_permission_files_access">Cette application a besoin de permission pour fonctionner.</string>
    <string name="toast_title_no_image_chosen">Aucune image choisie&#8230;</string>

    <!-- FACEBOOK APPLICATION ID -->
    <string name="facebook_application_id" translatable="false">487698642501182</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb487698642501182</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_your_lunch_item">YOUR LUNCH</string>
    <string name="drawer_settings_item">SETTINGS</string>
    <string name="drawer_logout_item">LOGOUT</string>


    <string name="app_name2">Current Place Details</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="no_friends">No one eats in this restaurant !</string>
    <string name="workmates_not_place">\u0020hasn\'t decided yet</string>
    <string name="place_workmates_eating">\u0020is eating at\u0020 </string>

    <!-- Used in ListViewHolder -->
    <string name="open_restaurant">Open</string>
    <string name="closed_restaurant">Closed</string>

    <string name="text_workmate_joining">%1$s is joining!</string>

    <string name="Avatar">Photo of a workmate</string>
    <string name="call_btn">CALL</string>
    <string name="like_btn">LIKE</string>
    <string name="website_btn">WEBSITE</string>
    <string name="business_lunch_photo">Business lunch photo</string>


    <!-- activity_restaurant_detail.xml -->
    <string name="photo_restaurant">Photo of the selected restaurant</string>
    <string name="content_description_select_restaurant_fab">Button to mark the restaurant as selected</string>
    <string name="detail_restaurant_like">LIKE</string>
    <string name="detail_restaurant_unlike" translatable="false">UNLIKE</string>
    <string name="detail_restaurant_call_btn">CALL</string>
    <string name="detail_restaurant_website_btn">WEBSITE</string>
    <string name="cancel_booking">You cancelled the booking for this place</string>
    <string name="modify_booking">You have chosen a new place for lunch</string>
    <string name="new_booking">You have chosen this place for lunch</string>
    <string name="restaurant_error">Unable to retrieve information</string>

    <!-- Autocomplete search bar -->
    <string name="search_bar_hint">Search restaurants</string>

</resources>