<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/drawer_menu_your_lunch_btn"
            android:icon="@drawable/ic_your_lunch_24"
            android:title="@string/drawer_your_lunch_item" />

        <item
            android:id="@+id/drawer_menu_settings_btn"
            android:icon="@drawable/ic_settings_24"
            android:title="@string/drawer_settings_item" />

        <item
            android:id="@+id/drawer_menu_logout_btn"
            android:icon="@drawable/ic_power_24"
            android:title="@string/drawer_logout_item" />

    </group>
</menu>