<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >

    <item
        android:id="@+id/map_view_item"
        android:enabled="true"
        android:icon="@drawable/ic_map_bottom_nav"
        android:title="@string/icon_map_view"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/list_view_item"
        android:enabled="true"
        android:icon="@drawable/ic_list_view_bottom_nav"
        android:title="@string/icon_list_view"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/workmates_item"
        android:enabled="true"
        android:icon="@drawable/ic_workmates_bottom_nav"
        android:title="@string/icon_workmates"
        app:showAsAction="ifRoom" />
</menu>