<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_layout_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.SignInActivity">

    <!-- BACKGROUND IMAGE -->
    <ImageView
        android:id="@+id/background_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="TODO"
        android:scaleType="centerCrop"
        android:src="@drawable/main_background_img" />

    <!-- MAIN CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_large_margin"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- APP LOGO -->
                <ImageView
                    android:id="@+id/app_logo"
                    android:layout_width="@dimen/default_logo_size"
                    android:layout_height="@dimen/default_logo_size"
                    android:layout_weight="1"
                    android:background="@drawable/ic_logo_go4lunch"
                    android:contentDescription="@string/go4lunch_logo" />

                <!-- TITLE GO4LUNCH -->
                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="51dp"
                    android:layout_weight="1"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="57sp"
                    android:textStyle="bold" />

                <!-- DESCRIPTION GO4LUNCH  -->
                <TextView
                    android:id="@+id/app_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_subtitle"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/default_text_size"
                    android:textStyle="bold|italic" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/auth_button_container"
                android:layout_width="260dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fb_auth_btn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_large_margin"
                    android:background="@drawable/button_radius_fb_color"
                    android:paddingStart="10dp"
                    android:text="@string/sign_in_with_fb"
                    android:textAllCaps="false"
                    android:theme="@style/MaterialButtonThemeFacebook"
                    app:icon="@drawable/com_facebook_button_icon"
                    tools:ignore="RtlSymmetry,TextContrastCheck" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/google_auth_btn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_large_margin"
                    android:background="@drawable/button_radius_google_color"
                    android:paddingStart="10dp"
                    android:text="@string/sign_in_with_google"
                    android:textAllCaps="false"
                    android:theme="@style/MaterialButtonThemeGoogle"
                    app:icon="@drawable/fui_ic_googleg_color_24dp"
                    tools:ignore="RtlSymmetry,TextContrastCheck" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/twitter_auth_btn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_large_margin"
                    android:background="@drawable/button_radius_twitter_color"
                    android:paddingStart="10dp"
                    android:text="@string/sign_in_with_twitter"
                    android:textAllCaps="false"
                    android:theme="@style/MaterialButtonThemeTwitter"
                    app:icon="@drawable/fui_ic_twitter_bird_white_24dp"

                    tools:ignore="RtlSymmetry" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/email_auth_btn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_large_margin"
                    android:background="@drawable/button_radius_email_color"
                    android:paddingStart="10dp"
                    android:text="@string/sign_in_with_email"
                    android:textAllCaps="false"
                    android:theme="@style/MaterialButtonThemeSignIn"
                    app:icon="@drawable/ic_email"
                    tools:ignore="RtlSymmetry,TextContrastCheck" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>