<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/activity_detail_restaurant_img"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:contentDescription="@string/photo_restaurant"
        android:scaleType="centerCrop"
        android:src="@drawable/lunch_meals"
        tools:ignore="MissingConstraints" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/activity_detail_restaurant_detail_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintHeight_percent=".140"
        app:layout_constraintTop_toBottomOf="@id/activity_detail_restaurant_img" />


    <TextView
        android:id="@+id/activity_detail_restaurant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:singleLine="true"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="@id/activity_detail_restaurant_detail_container"
        app:layout_constraintTop_toTopOf="@id/activity_detail_restaurant_detail_container"
        tools:text="Le Zinc" />


    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/item_restaurant_list_ratingbar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:numStars="3"
        android:theme="@style/ratingBar"
        app:layout_constraintBottom_toBottomOf="@+id/activity_detail_restaurant_name"
        app:layout_constraintLeft_toLeftOf="@id/activity_detail_restaurant_detail_container"
        app:layout_constraintStart_toEndOf="@+id/activity_detail_restaurant_name"
        app:layout_constraintTop_toTopOf="@+id/activity_detail_restaurant_name" />


    <TextView
        android:id="@+id/activity_detail_restaurant_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="@id/activity_detail_restaurant_name"
        app:layout_constraintTop_toBottomOf="@id/activity_detail_restaurant_name"
        tools:ignore="TextContrastCheck"
        tools:text="French restaurant - 12 rue du Faubourg Poissonnière" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:padding="25dp"
        android:clickable="true"
        android:contentDescription="@string/content_description_select_restaurant_fab"
        app:backgroundTint="@color/white"
        android:src="@drawable/ic_baseline_check_circle_green_24"
        app:layout_constraintBottom_toBottomOf="@id/activity_detail_restaurant_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_detail_restaurant_img" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_detail_restaurant_detail_btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_detail_restaurant_detail_container" />

    <Button
        android:id="@+id/call_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_baseline_call_orange_24"
        android:paddingTop="20dp"
        android:paddingRight="16dp"
        android:paddingBottom="5dp"
        android:text="@string/detail_restaurant_call_btn"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/lightOrange"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_detail_restaurant_detail_container"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/like_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_baseline_star_border_orange_24"
        android:gravity="center_horizontal"
        android:paddingLeft="40dp"
        android:paddingTop="20dp"
        android:paddingRight="40dp"
        android:paddingBottom="5dp"
        android:text="@string/detail_restaurant_like"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/lightOrange"
        app:layout_constraintLeft_toRightOf="@id/call_btn"
        app:layout_constraintRight_toLeftOf="@id/website_btn"
        app:layout_constraintTop_toTopOf="@id/call_btn"
        tools:ignore="RtlSymmetry" />


    <Button
        android:id="@+id/website_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_baseline_public_orange_24"
        android:paddingLeft="16dp"
        android:paddingTop="20dp"
        android:paddingRight="32dp"
        android:paddingBottom="5dp"
        android:text="@string/detail_restaurant_website_btn"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/lightOrange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/like_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/call_btn"
        tools:ignore="RtlSymmetry" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/restaurant_list_item"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/like_btn">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/lightGrey"
            tools:ignore="MissingConstraints" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_detail_restaurant_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="@+id/view"
            tools:listitem="@layout/workmates_joining_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>